syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.mhcc.task.proto";
option java_outer_classname = "TaskServerProto";

service TaskService {
  //  创建任务
  rpc createTask (CreateTaskReq) returns (CreateTaskRes) {}
  //  修改任务
  rpc updateTask (UpdateTaskReq) returns (UpdateTaskRes) {}
  //  删除任务
  rpc deleteTask (DeleteTaskReq) returns (DeleteTaskRes) {}
}

message CreateTaskReq {
  string taskName = 1;
  string taskGroup = 2;
  string taskType = 3;
  string expression = 4;
}

message CreateTaskRes {
  bool result = 1;
}

message UpdateTaskReq {
  string taskName = 1;
  string cron = 2;
  string className = 3;
}

message UpdateTaskRes {
  bool result = 1;
}

message DeleteTaskReq {
  string taskName = 1;
  string cron = 2;
  string className = 3;
}

message DeleteTaskRes {
  bool result = 1;
}